welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: type mismatch;
 found   : Boolean
 required: Int
	while (x=0==false){
                  ^Variables:5: error: type mismatch;
 found   : Unit
 required: Boolean
	while (x=0==false){
                ^