welcome.lessons.welcome.variables.Variables.scala.code
var x:Int = 0
if (estSurBiscuit){
	prendBiscuit();
	while (x=0==false){
		x=x-1
		recule()
	}
}
